# BTC-Network

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
config/: bitcoin3.conf
